plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.java'
version = '0.0.1-SNAPSHOT'
description = 'springStreaming'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // https://mvnrepository.com/artifact/net.bramp.ffmpeg/ffmpeg
    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'

    //DOTENV
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'



    implementation "com.github.docker-java:docker-java:3.6.0"
    implementation "com.github.docker-java:docker-java-transport-httpclient5:3.6.0"

    implementation 'org.springframework.boot:spring-boot-starter-amqp'
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
